--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@untools/ai-toolkit": "^0.0.1",
     "@untools/logger": "^0.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
