--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
+    "marked": "^15.0.4",
     "mongoose": "^8.21.0",
     "motion": "^12.27.1",
     "next": "16.1.2",
