--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^3.0.11",
     "@tailwindcss/typography": "^0.5.19",
     "@untools/ai-toolkit": "^0.0.1",
     "@untools/logger": "^0.0.8",
+    "ai": "^6.0.42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.3",
