--- a/apps/agent-host/package.json
+++ b/apps/agent-host/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@octokit/rest": "^21.0.0",
-    "express": "^4.18.2",
     "axios": "^1.6.0",
-    "simple-git": "^3.22.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "simple-git": "^3.22.0",
     "zod": "^4.3.5"
   },
   "optionalDependencies": {
@@ -25,10 +25,10 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20",
-    "typescript": "^5",
-    "tsx": "^4.7.0",
     "eslint": "^9",
-    "eslint-config-next": "^16.1.2"
+    "eslint-config-next": "^16.1.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=20.0.0"
