chore(package): update package metadata
- Change "version" to "0.2.0" in
- Update "main" file to be a JavaScript file ("devflow-agent.js")
- Add repository, bugs URL, and homepage to
- Add "prepublishOnly" script to run
> pinga-mvp@1.0.0 build
> npm run build --workspace=apps/web

> web@0.1.0 build
> next build

▲ Next.js 16.1.2 (Turbopack)
- Environments: .env.local

  Creating an optimized production build ...
✓ Compiled successfully in 4.9s
  Running TypeScript ...
  Collecting page data using 7 workers ...
  Generating static pages using 7 workers (0/20) ...
  Generating static pages using 7 workers (5/20)
  Generating static pages using 7 workers (10/20)
  Generating static pages using 7 workers (15/20)
✓ Generating static pages using 7 workers (20/20) in 349.2ms
  Finalizing page optimization ...

Route (app)
┌ ○ /
├ ○ /_not-found
├ ƒ /api/agents
├ ƒ /api/agents/[agent_id]/commands
├ ƒ /api/agents/[agent_id]/heartbeat
├ ƒ /api/auth/magic-link/request
├ ƒ /api/auth/magic-link/verify
├ ƒ /api/auth/otp/verify
├ ƒ /api/auth/pin/login
├ ƒ /api/auth/pin/set
├ ƒ /api/auth/slack/callback
├ ƒ /api/copilot/command
├ ƒ /api/copilot/task-update
├ ƒ /api/tasks/[task_id]/complete
├ ƒ /api/tasks/[task_id]/progress
├ ƒ /api/user/settings
├ ƒ /api/webhook
├ ƒ /api/webhook/[source]
├ ƒ /api/webhook/payload/[id]
├ ƒ /api/webhook/slack
├ ƒ /api/webhook/telegram
├ ƒ /dashboard
├ ƒ /dashboard/settings
├ ƒ /help/[[...slug]]
└ ○ /login

ƒ Proxy (Middleware)

○  (Static)   prerendered as static content
ƒ  (Dynamic)  server-rendered on demand
- Update "engines" field to require Node.js >=18.0.0
- Add "github-copilot" and "cli-agent" to keywords in

--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -1,21 +1,30 @@
 {
   "name": "devflow-agent",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Self-hosted AI DevOps agent for DevFlow platform",
   "type": "module",
   "bin": {
-    "devflow-agent": "./bin/devflow-agent.mjs"
+    "devflow-agent": "./bin/devflow-agent.js"
   },
   "main": "./dist/index.js",
   "exports": {
     ".": "./dist/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/devflow/devflow-agent.git"
+  },
+  "bugs": {
+    "url": "https://github.com/devflow/devflow-agent/issues"
+  },
+  "homepage": "https://github.com/devflow/devflow-agent#readme",
   "scripts": {
     "build": "tsc && node fix-imports.js",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "cli": "tsx src/cli.ts",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "devflow",
@@ -25,9 +34,11 @@
     "automation",
     "github",
     "slack",
-    "telegram"
+    "telegram",
+    "github-copilot",
+    "cli-agent"
   ],
-  "author": "DevFlow",
+  "author": "DevFlow Contributors",
   "license": "MIT",
   "dependencies": {
     "@github/copilot-sdk": "^0.1.16",
@@ -42,5 +53,8 @@
     "@types/yargs": "^17.0.35",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
