fix(arch): update platform URL to web app and fix devflow-agent CLI
- Update  with platform URL to web app
- Update  to use web app platform URL
- Update  to reflect new platform URL

--- a/apps/agent/.env.example
+++ b/apps/agent/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env.local and update with your values
 
 # Platform Configuration
-PLATFORM_URL=https://devflow.example.com
+PLATFORM_URL=https://devflow-web.vercel.app
 PLATFORM_API_KEY=your-platform-jwt-token
 
 # OAuth & Authentication
